--- a/dash/src/index.css
+++ b/dash/src/index.css
@@ -1,5 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Lora:wght@400;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Fredericka+the+Great&family=Lilita+One&family=Lora:ital,wght@0,400..700;1,400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import "tailwindcss";
+
+/* Add Bebas Neue to Tailwind */
+.font-bebas {
+  font-family: 'Bebas Neue', cursive, sans-serif;
+}
+
+/* Add Poppins to Tailwind */
+.font-poppins {
+  font-family: 'Poppins', sans-serif;
+}
 
 /* Add Lora to Tailwind */
 .font-lora {
@@ -8,7 +18,7 @@
 
 @keyframes spin-slow {
   0% { transform: rotate(0deg);}
-  100% { transform: rotate(360deg);}
+  100% { transform: rotate(360deg);}  
 }
 .animate-spin-slow {
   animation: spin-slow 3s linear infinite;
